<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of BOINC.
  http://boinc.berkeley.edu
  Copyright (C) 2012 University of California
  
  BOINC is free software; you can redistribute it and/or modify it
  under the terms of the GNU Lesser General Public License
  as published by the Free Software Foundation,
  either version 3 of the License, or (at your option) any later version.
  
  BOINC is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU Lesser General Public License for more details.
  
  You should have received a copy of the GNU Lesser General Public License
  along with BOINC.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/help"
         android:enabled="true"
         android:visible="true"
         android:title="@string/menu_help"
         android:icon="@drawable/helpw"></item>
    <item android:id="@+id/about"
         android:enabled="true"
         android:visible="true"
         android:title="@string/menu_about"
         android:icon="@drawable/infow"></item>
    <item android:id="@+id/event_log"
         android:enabled="true"
         android:title="@string/menu_eventlog"
         android:icon="@drawable/bugw"></item>
    <item android:id="@+id/run_mode"
         android:enabled="true"
         android:visible="true"></item>
    <item android:id="@+id/exit_boinc"
         android:enabled="true"
         android:visible="true"
         android:title="@string/menu_exit"
         android:icon="@drawable/offw"></item>
</menu>