<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of BOINC.
  http://boinc.berkeley.edu
  Copyright (C) 2012 University of California
  
  BOINC is free software; you can redistribute it and/or modify it
  under the terms of the GNU Lesser General Public License
  as published by the Free Software Foundation,
  either version 3 of the License, or (at your option) any later version.
  
  BOINC is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU Lesser General Public License for more details.
  
  You should have received a copy of the GNU Lesser General Public License
  along with BOINC.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <ImageView 
        android:id="@+id/logo"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="40dp"
    	android:layout_marginRight="40dp"
    	android:layout_marginBottom="20dp"
    	android:layout_marginTop="20dp"
    	android:maxWidth="400dp"
    	android:adjustViewBounds="true"
    	android:src="@drawable/boinc_logo_large"
    	android:contentDescription="@string/app_name"/>
    
    <TextView 
        android:id="@+id/desc"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/attachproject_credential_input_desc"
    	android:textAppearance="?android:attr/textAppearanceMedium"
    	android:layout_below="@+id/logo"
    	android:layout_marginLeft="40dp"
    	android:layout_marginRight="40dp"
    	android:layout_marginBottom="20dp"/>

    <EditText 
        android:id="@+id/email_input"
        android:inputType="textEmailAddress"
        android:hint="@string/attachproject_login_header_id_email"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/desc"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:layout_marginBottom="20dp"/>
    
    <EditText 
        android:id="@+id/name_input"
        android:inputType="textNoSuggestions"
        android:hint="@string/attachproject_login_header_id_name"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/email_input"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:layout_marginBottom="20dp"/>
    
    <EditText 
        android:id="@+id/pwd_input"
        android:inputType="textPassword"
        android:hint="@string/attachproject_login_header_pwd"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/name_input"
    	android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
    	android:layout_marginBottom="20dp"/>
        
    <Button 
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
   		android:layout_below="@+id/pwd_input"
        android:layout_alignParentRight="true"
        android:text="@string/generic_button_continue"
		android:textColor="@android:color/white"
		android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/shape_button_blue"
        android:minWidth="150dp"
		android:padding="5dp"
		android:layout_marginRight="10dp"
    	android:layout_marginBottom="30dp"
		android:onClick="continueClicked"/>
    
    <TextView 
        android:id="@+id/individual_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    	android:text="@string/attachproject_individual_credential_input"
   		android:layout_below="@+id/continue_button"
   		android:layout_centerHorizontal="true"
   		android:textColor="@color/dark_blue"
    	android:textAppearance="?android:attr/textAppearanceSmall"
   		android:textStyle="bold"
   		android:clickable="true"
   		android:onClick="individualClicked"
    	android:layout_marginBottom="20dp"/>
</RelativeLayout>
</ScrollView>
