<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of BOINC.
  http://boinc.berkeley.edu
  Copyright (C) 2012 University of California
  
  BOINC is free software; you can redistribute it and/or modify it
  under the terms of the GNU Lesser General Public License
  as published by the Free Software Foundation,
  either version 3 of the License, or (at your option) any later version.
  
  BOINC is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU Lesser General Public License for more details.
  
  You should have received a copy of the GNU Lesser General Public License
  along with BOINC.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white_smoke" >
    
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:padding="10dp"
    	android:layout_marginBottom="10dp"
    	android:background="@drawable/shape_light_blue_background"
    	android:gravity="center_vertical" >
    	
        <ImageView 
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:src="@drawable/infob48"
	        android:background="@android:color/transparent"
	        android:contentDescription="@string/menu_about"/>
        
        <TextView
	        android:id="@+id/title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	       	android:layout_marginLeft="10dp"
	       	android:singleLine="true"
	       	android:textColor="@color/black"
	        android:textAppearance="?android:attr/textAppearanceMedium"
	        android:background="@android:color/transparent"
	        android:text="@string/about_title"
	        android:textStyle="bold" />
        
    </LinearLayout>   
     
   	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@android:color/transparent"
	    android:textColor="@color/black"
	    android:textStyle="bold"
	    android:text="@string/about_name"
	    android:gravity="center_horizontal" />
     
   	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="@android:color/transparent"
	    android:textColor="@color/black"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    android:paddingBottom="10dp"
	    android:text="@string/about_name_long"
	    android:gravity="center_horizontal" />
     
   	<TextView
	    android:id="@+id/version"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="@android:color/transparent"
	    android:textColor="@color/black"
	    android:padding="10dp"
	    android:gravity="center_horizontal"  />
     
   	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:background="@android:color/transparent"
	    android:textColor="@color/black"
	    android:padding="10dp"
	    android:text="@string/about_copyright"
	    android:gravity="center_horizontal" />
    	
	<Button
		android:id="@+id/returnB"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:padding="5dp"
		android:clickable="true"
		android:layout_margin="5dp"
		android:background="@drawable/shape_button_blue"
		android:textColor="@color/white_smoke"
		android:textAppearance="?android:attr/textAppearanceMedium" 
		android:text="@string/about_button"
		android:layout_gravity="center_horizontal"/> 
</LinearLayout>
