<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of BOINC.
  http://boinc.berkeley.edu
  Copyright (C) 2012 University of California
  
  BOINC is free software; you can redistribute it and/or modify it
  under the terms of the GNU Lesser General Public License
  as published by the Free Software Foundation,
  either version 3 of the License, or (at your option) any later version.
  
  BOINC is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU Lesser General Public License for more details.
  
  You should have received a copy of the GNU Lesser General Public License
  along with BOINC.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <ImageView 
        android:id="@+id/logo"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginLeft="40dp"
    	android:layout_marginRight="40dp"
    	android:layout_marginBottom="20dp"
    	android:layout_marginTop="20dp"
    	android:maxWidth="400dp"
    	android:adjustViewBounds="true"
    	android:src="@drawable/boinc_logo_large"
    	android:contentDescription="@string/app_name"/>
    
    <TextView 
        android:id="@+id/title"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:textAppearance="?android:attr/textAppearanceMedium"
    	android:textStyle="bold"
    	android:gravity="center"
    	android:padding="10dp"
    	android:background="@drawable/shape_light_blue_border"/>
    
    <ScrollView 
		android:id="@+id/input_wrapper"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_gravity="center_horizontal"
    	android:layout_marginTop="20dp"
    	android:padding="10dp"
    	android:minWidth="220dp">
    	
        <LinearLayout
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
    		android:gravity="center_horizontal">

		    <EditText 
		        android:id="@+id/email_input"
		        android:inputType="textEmailAddress"
		        android:hint="@string/attachproject_login_header_id_email"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5dp"/>
		    
		    <EditText 
		        android:id="@+id/name_input"
		        android:inputType="textNoSuggestions"
		        android:hint="@string/attachproject_login_header_id_name"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5dp"/>
		    
		    <EditText 
		        android:id="@+id/pwd_input"
		        android:inputType="textPassword"
		        android:hint="@string/attachproject_login_header_pwd"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5dp"/>
    	</LinearLayout>
    </ScrollView>
    
    <TextView 
        android:id="@+id/status_text"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
	    android:gravity="center"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:visibility="gone"
	    android:background="@drawable/shape_light_red_background"
    	android:padding="20dp"
    	android:layout_marginTop="20dp"/>
        
    <LinearLayout 
        android:id="@+id/ongoing_wrapper"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:background="@drawable/shape_light_blue_background"
    	android:padding="20dp"
    	android:layout_marginTop="20dp">
        
	    <ProgressBar 
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
        	style="?android:attr/progressBarStyleSmall"
        	android:background="@android:color/transparent"
        	android:layout_marginRight="10dp"
        	android:layout_gravity="center_vertical"/>
	    
	    <TextView 
	        android:id="@+id/ongoing_desc"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:textAppearance="?android:attr/textAppearanceMedium"
	    	android:gravity="center"
	        android:text="@string/attachproject_login_loading"/>
        
    </LinearLayout>
        
    <LinearLayout 
        android:id="@+id/button_wrapper"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_marginTop="20dp"
    	android:visibility="gone"
    	android:padding="10dp">
        
        <RelativeLayout 
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content">
        
	        <Button 
		        android:id="@+id/login_button"
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:text="@string/attachproject_login_button_login"
				android:textColor="@android:color/white"
				android:textAppearance="?android:attr/textAppearanceMedium"
		        android:background="@drawable/shape_button_blue"
				android:padding="5dp"
				android:layout_margin="10dp"
				android:layout_alignParentRight="true"/>
	        
	        <Button 
		        android:id="@+id/register_button"
		        android:layout_width="150dp"
		        android:layout_height="wrap_content"
		        android:text="@string/attachproject_login_button_registration"
				android:textColor="@android:color/white"
				android:textAppearance="?android:attr/textAppearanceMedium"
		        android:background="@drawable/shape_button_blue"
				android:padding="5dp"
				android:layout_margin="10dp"
				android:layout_alignParentLeft="true"/>
        
        </RelativeLayout>
        
        <Button 
	        android:id="@+id/forgotpwd_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/attachproject_login_button_forgotpw"
			android:textColor="@android:color/white"
			android:textAppearance="?android:attr/textAppearanceMedium"
	        android:background="@drawable/shape_button_red"
	        android:minWidth="200dp"
			android:padding="5dp"
			android:layout_margin="10dp"
			android:layout_gravity="center_horizontal"/>
        
    </LinearLayout>

</LinearLayout>
