<?xml version="1.0" encoding="utf-8"?>
<!--
  This file is part of BOINC.
  http://boinc.berkeley.edu
  Copyright (C) 2012 University of California
  
  BOINC is free software; you can redistribute it and/or modify it
  under the terms of the GNU Lesser General Public License
  as published by the Free Software Foundation,
  either version 3 of the License, or (at your option) any later version.
  
  BOINC is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  See the GNU Lesser General Public License for more details.
  
  You should have received a copy of the GNU Lesser General Public License
  along with BOINC.  If not, see <http://www.gnu.org/licenses/>.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <TextView 
        android:id="@+id/title"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:textAppearance="?android:attr/textAppearanceLarge"
    	android:textStyle="bold"
    	android:padding="20dp"
    	android:background="@drawable/shape_light_blue_background"
    	android:layout_marginBottom="20dp"/>
    
    <TextView 
        android:id="@+id/message"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textAppearance="?android:attr/textAppearanceSmall"
    	android:layout_below="@+id/title"
    	android:layout_marginLeft="20dp"
    	android:layout_marginRight="20dp"/>
    
    <TextView 
        android:id="@+id/desc"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:text="@string/attachproject_conflict_resolve_input"
    	android:textAppearance="?android:attr/textAppearanceSmall"
    	android:layout_below="@+id/message"
    	android:layout_marginLeft="20dp"
    	android:layout_marginRight="20dp"
    	android:layout_marginBottom="20dp"/>
    
    <ScrollView 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/desc"
    	android:layout_centerHorizontal="true"
    	android:minWidth="220dp">
    	
        <LinearLayout
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:orientation="vertical"
    		android:gravity="center_horizontal">

		    <EditText 
		        android:id="@+id/email_input"
		        android:inputType="textEmailAddress"
		        android:hint="@string/attachproject_login_header_id_email"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5dp"/>
		    
		    <EditText 
		        android:id="@+id/name_input"
		        android:inputType="textNoSuggestions"
		        android:hint="@string/attachproject_login_header_id_name"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5dp"/>
		    
		    <EditText 
		        android:id="@+id/pwd_input"
		        android:inputType="textPassword"
		        android:hint="@string/attachproject_login_header_pwd"
		    	android:layout_width="fill_parent"
		    	android:layout_height="wrap_content"
		    	android:layout_margin="5dp"/>
		    
		    <LinearLayout 
		    	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:orientation="vertical"
		    	android:gravity="center_horizontal">
		        
		        <Button 
			        android:id="@+id/login_button"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/attachproject_login_button_login"
					android:textColor="@android:color/white"
					android:textAppearance="?android:attr/textAppearanceMedium"
			        android:background="@drawable/shape_button_blue"
			        android:minWidth="150dp"
					android:padding="5dp"
					android:layout_margin="10dp"/>
		        
		        <Button 
			        android:id="@+id/register_button"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/attachproject_login_button_registration"
					android:textColor="@android:color/white"
					android:textAppearance="?android:attr/textAppearanceMedium"
			        android:background="@drawable/shape_button_blue"
			        android:minWidth="150dp"
					android:padding="5dp"
					android:layout_margin="10dp"/>
		        
		        <Button 
			        android:id="@+id/forgotpwd_button"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/attachproject_login_button_forgotpw"
					android:textColor="@android:color/white"
					android:textAppearance="?android:attr/textAppearanceMedium"
			        android:background="@drawable/shape_button_red"
			        android:minWidth="200dp"
					android:padding="5dp"
					android:layout_margin="10dp"/>
		        
		    </LinearLayout>
    
    	</LinearLayout>
    </ScrollView>

</RelativeLayout>
